[package]
name = "kvs"
version = "0.1.0"
authors = ["fallenhh <fallen2hh@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dev-dependencies]
assert_cmd = "0.11.0"
predicates = "1.0.0"
tempfile = "3.0.7"
walkdir = "2.2.7"

[dependencies]
clap = "3.0.0-beta.1"
anyhow = "1.0"

[lib]
test = false

[[bin]]
name = "kvs"
test = false